--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "squizlabs/php_codesniffer": "^3.5",
+        "php-parallel-lint/php-console-color": "^0.2.0",
+        "php-parallel-lint/php-parallel-lint": "^1.2"
     },
     "config": {
         "optimize-autoloader": true,
@@ -58,6 +61,15 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "lint": "parallel-lint . --exclude vendor",
+        "style": "phpcs -p --standard=PSR2 src tests",
+        "fix-style": "phpcbf -p --standard=PSR2 src tests",
+        "phpunit": "phpunit --configuration phpunit.xml",
+        "test": [
+            "parallel-lint . --exclude vendor",
+            "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 app/Hexagonal/Domain/ tests",
+            "phpunit --configuration phpunit.xml"
         ]
     }
 }
