--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,4 +27,4 @@ jobs:
       #  run: php artisan key:generate
 
       - name: Run the tests
-        run: composer phpunit
+        run: ./vendor/bin/phpunit
