--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,9 @@ jobs:
     strategy:
       matrix:
         #        os: [ubuntu-latest, windows-latest, macOS-latest]
-        os: [ubuntu-latest]
+        os: [ubuntu-19]
         # php-versions key comes from github shivammathur/setup-php library we are using to change php version
-        php-versions: ['7.3', '7.4']
+        php-versions: ['7.3']
 
     name: ${{ matrix.os }} PHP ${{ matrix.php-versions }}
     steps:
