--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         #        os: [ubuntu-latest, windows-latest, macOS-latest]
-        os: [ubuntu-20]
+        os: [ubuntu-latest]
         # php-versions key comes from github shivammathur/setup-php library we are using to change php version
         php-versions: ['7.4']
 
