--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,15 +42,15 @@ jobs:
       - name: Start all the environment
         run: make start
 
-#      - name: Wait for the environment to get up
-#        run: |
-#          while ! docker exec codelytv-php_ddd_skeleton-mooc-mysql mysqladmin --user=root --password= --host "127.0.0.1" ping --silent &> /dev/null ; do
-#              echo "Waiting for database connection..."
-#              sleep 2
-#          done
-#      - name: Run the tests
-#        working-directory: ./lessons/04-Testing_Infrastructure/04.2-Installing_dependencies_by_docker
-#        run: make test
+      - name: Wait for the environment to get up
+        run: |
+          while ! docker exec is-nasdaq-open-now-container-mysql mysqladmin --user=root --password= --host "127.0.0.1" ping --silent &> /dev/null ; do
+              echo "Waiting for database connection..."
+              sleep 2
+          done
+      - name: Run the tests
+        working-directory: ./lessons/04-Testing_Infrastructure/04.2-Installing_dependencies_by_docker
+        run: make test
 
 #      - name: Start app
 #        working-directory: ./docker
