--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Wait for the environment to get up
         run: |
-          while ! ping-mysql &> /dev/null; do
+          while ! docker exec is-nasdaq-open-now-container-mysql mysqladmin --user=root --password=root --host "127.0.0.1" ping --silent &> /dev/null ; do
               echo "Waiting for database connection..."
               sleep 2
           done
