--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
         run: make composer-install
 
       - name: Get release version
-        run: echo ::set-env name=RELEASE_VERSION::$[GITHUB_REF:10]
+        run: echo ::set-env name=RELEASE_VERSION::${{GITHUB_REF:10}}
 
       - uses: docker/build-push-action@v1
         with:
