Push image to registry

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Publish to the registry
         run: |
           docker login docker.pkg.github.com --username "xabierlegasa" --password "d62c54ed-b684-4b6a-8d4c-52a90cf89a2b"
-          docker push docker.pkg.github.com/xabierlegasa/isnasdaqopennow/isnasdaqopennow:${{RELEASE_VERSION}}
+          docker push docker.pkg.github.com/xabierlegasa/isnasdaqopennow/isnasdaqopennow:${RELEASE_VERSION}
 
       - name: Somethin
         run: pwd
